--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,6 +1,7 @@
 @import '~bootstrap/scss/bootstrap.scss';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap');
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import './variables.scss';
 
 
 body {
