aggiunta mixins variabili e classi bootstrap

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,4 +1,6 @@
-$background_Img: #333844;
-$secondary_titles: #EA4A56;
-$main_titles: white;
+$light-background-img: #333844;
+$dark-background: #252A32;
+$secondary-titles: #EA4A56;
+$main-titles: white;
 $text-color: #AEAEB0;
+$font-paragraph: 14px;
